--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,5 +2,5 @@ FROM python:3.13-slim
 WORKDIR /app
 COPY ./app /app
 RUN pip install -r requirements.txt
-CMD ["uvicorn", "main", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
 
