--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -1,4 +1,4 @@
-version "3.8"
+version: "3.8"
 services:
   db:
       image: postgres:12
@@ -11,8 +11,8 @@ services:
       networks:
             - monitoring
   api:
-      image: fastapi-app
-      container_name: fa-server
+      image: fp-app
+      container_name: fp-app
       ports:
          - 8000:8000
       networks:
@@ -62,4 +62,3 @@ volumes:
 
 networks:
       monitoring:
-      external: true
