--- a/server/app/requirements.txt
+++ b/server/app/requirements.txt
@@ -1,2 +1,8 @@
 fastapi>=0.113.0,<0.114.0
-uvicorn[standard]>=0.30.0   
+uvicorn[standard]>=0.30.0
+torch
+torchvision
+numpy
+pillow
+opencv-python-headless
+
