--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+*.pth filter=lfs diff=lfs merge=lfs -text
 server/Model/efficientnet_finetuned_unfreeze_b2_3_class.pth filter=lfs diff=lfs merge=lfs -text
